--- a/index.html
+++ b/index.html
@@ -3,16 +3,47 @@
 <head>
     <title>Home Page</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
 
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+</style>
 </head>
 <body>
-    <div class='.button'>
-  <a class="active" href="index.html">Home</a>
-  <a href="birthday.html">Birthday</a>
-  <a href="animals.html">Animals</a>
-  <a href="games.html">Games</a>
-  <a href="mystummyhurt.html">Mystummyhurt</a>
+    <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a class="active" href="animals.html">Animals</a></li>
+  <li><a href="birthday.html">Birthday</a></li>
+  <li><a href="mystummyhurt.html">mystummyhurt</a></li>
+  <li><a href="games.html">Games</a></li>
+</ul>
+
     </div>
-        <h1>homepage</h1>
+        <h1>Homepage</h1>
+
 </body>
 </html>
