--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ li a:hover {
   <li><a href="birthday.html">Birthday</a></li>
   <li><a href="mystummyhurt.html">mystummyhurt</a></li>
   <li><a href="games.html">Games</a></li>
+  <li><a href="photos.html">Photos</a></li>
 </ul>
 
     </div>
