--- a/games.html
+++ b/games.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
 <html>
+    <style>
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+</style>
+ <style>
+        img{height:500px;
+            width:550px;
+            border:3px solid red;}
+        body{background-color: black;color: red;}
+    </style>
     <head>
         <title>Faze Tfue</title>
             <h1>FAZE TFUE THE GOAT</h1>
                 <img src="https://vignette.wikia.nocookie.net/youtube/images/6/62/Tfue.jpg/revision/latest?cb=20180612113821">
 </head>
 <body>
+            <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a class="active" href="animals.html">Animals</a></li>
+  <li><a href="birthday.html">Birthday</a></li>
+  <li><a href="mystummyhurt.html">mystummyhurt</a></li>
+  <li><a href="games.html">Games</a></li>
+  <li><a href="photos.html">Photos</a></li>
+            </ul>
             <p> Faze Tfue, Turner, is considered the best fortnite player in the world. You can see his amazing talent in the fast paced building ability he posesses and the keen eye to take down whole squads. His trickshots go viral as they are not from this world. He is a 4 time fortnite friday champion along with his skillful teammate, Faze Cloak. Tfue, Cloak, Jaomock and Tennpo just made a world record for wiping out 54 people in a squad game. Tfue as long as his Faze teammates are remarkable and make Fortnite entertaining to watch. Here are videos of his awesome gameplay:<p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/9JPGAkIu3bU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/_P_qo0zVZZQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/P1qKZXjjEFY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-    <style>
-        img{height:500px;
-            width:550px;
-            border:3px solid red;}
-        body{background-color: black;color: red;}
-    </style>
 
 </body>
 </html>
