--- a/mystummyhurt.html
+++ b/mystummyhurt.html
@@ -1,9 +1,44 @@
 <!DOCTYPE HTML>
 <html>
+  <style>
+  ul {
+       list-style-type: none;
+       margin: 0;
+       padding: 0;
+       overflow: hidden;
+       background-color: #333;
+        }
+     li {
+      float: left;
+       }
+     li a {
+       display: block;
+       color: white;
+       text-align: center;
+       padding: 14px 16px;
+       text-decoration: none;
+          }
+
+     li a:hover {
+       background-color: #111;
+                }
+
+     .active {
+       background-color: #4CAF50;}
+  </style>
+         
   <head>
     <title>Im on the Lean 4 Real</title>
   </head>
   <body>
+  <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a class="active" href="animals.html">Animals</a></li>
+  <li><a href="birthday.html">Birthday</a></li>
+  <li><a href="mystummyhurt.html">mystummyhurt</a></li>
+  <li><a href="games.html">Games</a></li>
+  <li><a href="photos.html">Photos</a></li>
+  </ul>    
                 <h1 style="color: red">My Stummy Hurt</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/F_NOuFKM1h0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <p>My name is playboi cartier and my stummy hurts.</p>
